Moved the 'blog' to the journal path.

--- a/journal/index.html
+++ b/journal/index.html
@@ -21,7 +21,7 @@ layout: default
   <div class="paginator">
     {% if paginator.previous_page %}
       {% if paginator.previous_page == 1 %}
-        <a class="prev_page" href="/">← Newer posts</a>
+        <a class="prev_page" href="{{ "/journal/" | prepend: site.baseurl }}">← Newer posts</a>
       {% else %}
         <a class="prev_page" href="{{ paginator.previous_page_path }}">← Newer posts</a>
       {% endif %}
